--- a/product-list/src/index.css
+++ b/product-list/src/index.css
@@ -307,25 +307,29 @@ p {
 
 
 /* ********* Modal Styles ************** */
-.modal-wrapper:has(dialog[open]) .backdrop {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.38);
-  position: fixed;
-  z-index: 3;
-}
-
-
 .modal {
-  z-index: 4;
-  position: fixed; 
-  top: 15%;
   border: none;
   border-radius: 1rem;
   padding: 1.5rem;
   width: 35rem;
   max-height: 450px;
   overflow-y: scroll;
+  opacity: 0.3;
+  scale: 0.5;
+  animation: fadeIn 0.6s forwards;
+  -webkit-animation: fadeIn 0.6s forwards;
+}
+
+.modal::backdrop{
+  background-color: rgba(0, 0, 0, 0.238);
+}
+
+
+@keyframes fadeIn {
+  to{
+    opacity: 1;
+    scale: 1;
+  }
 }
 
 .modal h1 {
